[modernizer] Use Double.valueOf instead of new Double